--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -235,6 +235,7 @@
             </label>
             <select class="govuk-select" style="min-width: 100%" id="aedproviderjourney" name="aed-provider-journey" data-option="aed-provider-journey">
                 <option value="aed-provider-2-0">Version 2-0</option>
+                <option value="aed-provider-3-0">Version 3-0</option>
             </select>
         </div>
     </div>
