--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,6 +14,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/task-list";
 @import "patterns/related-items";
 @import "patterns/aed-search-results";
+@import "patterns/das-user-panel";
 
 // Components that aren't in Frontend
 @import "components/cookie-banner";
@@ -23,6 +24,12 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/search";
 @import "components/accessible-autocomplete";
 @import "components/filter";
+@import "components/das-icon-search";
+
+
+.govuk-heading-xl--white, .govuk-body--white {
+    color: #fff;
+}
 
 .govuk-secondary-colour {
     color:#6f777b
