--- a/app/views/aed-provider-3-0/standards-list.html
+++ b/app/views/aed-provider-3-0/standards-list.html
@@ -2,7 +2,9 @@
 {% block pageTitle %}
 GOV.UK Prototype Kit
 {% endblock %}
-{% set serviceName = 'Employer request' %}
+
+{% set serviceName = 'Apprenticeship training opportunities' %}
+
 {% block beforeContent %}
 {{ govukPhaseBanner({
 	tag:
@@ -21,104 +23,89 @@ GOV.UK Prototype Kit
 {% set _citiesAutocompleteList = data['citiesAutocompleteList'] %}
 {% set _defaultLocationSearchvalue = "" %}
 
-{% block content %}
-<div class="govuk-grid-row">
-	<div class="govuk-grid-column-two-thirds">
-		<h1 class="govuk-heading-xl">
-			Training opportunities
-		</h1>
-	</div>
-</div>
-
-<div class="govuk-grid-row">
-	<div class="govuk-grid-column-full">
-		<form method="get" action="/find-an-assessment-opportunity/Search#approved">
-			<h2 class="govuk-label-wrapper">
-				<label class="govuk-label govuk-label--l" for="search-term">
-					Search
-				</label>
-			</h2>
-
-			<div class="das-icon-search das-icon-search--on-white" data-module="gem-toggle-input-class-on-focus">
-				<span id="search-term-hint" class="govuk-hint">
-					Search for Standard, reference or sector (route)
-				</span>
-				<div class="das-icon-search__item-wrapper">
-					<input type="search" id="search-term" class="das-icon-search__item das-icon-search__input js-class-toggle" name="SearchTerm" value="">
-					<div class="das-icon-search__item das-icon-search__submit-wrapper">
-						<button type="submit" class="das-icon-search__submit" id="search">Search</button>
+{% block main %}
+<main class="govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+	<div class="das-user-panel govuk-!-margin-bottom-8">
+		<div class="govuk-width-container">
+			<div class="govuk-grid-row">
+				<div class="govuk-grid-column-two-thirds">
+					<div class="das-user-panel__content">
+						<h1 class="govuk-heading-xl govuk-heading-xl--white govuk-!-margin-bottom-3">
+							{{serviceName}}
+						</h1>
+						<p class="govuk-body govuk-body--white govuk-!-margin-bottom-0">
+							DESCRIPTION
+						</p>
 					</div>
 				</div>
 			</div>
-		</form>
-	</div>
-</div>
-
-<div class="govuk-grid-row">
-	<div class="govuk-grid-column-full">
-		<h2 class="govuk-heading-m">Standards</h2>
-		<p class="govuk-body">
-			<span class="govuk-!-font-weight-bold">530</span> standards found
-		</p>
-
-		<table class="govuk-table govuk-table--small">
-			<thead class="govuk-table__head">
-				<tr class="govuk-table__row">
-					<th scope="col" class="govuk-table__header">
-						<a class="sorted-ascending approved-sort govuk-link">Standard</a>
-					</th>
-					<th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">
-						<a class="approved-sort govuk-link">Apprentices</a>
-					</th>
-					<th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">
-						<a class="approved-sort govuk-link">Interested employers</a>
-					</th>
-				</tr>
-			</thead>
-			<tbody class="govuk-table__body">
-				{% for _standard in data['standards'].list %}
-				<tr class="govuk-table__row">
-					<td class="govuk-table__cell">
-						<a href="standard?selectedStandard={{_standard.title}} (level {{_standard.level}})" class="govuk-link">{{_standard.title}} (level {{_standard.level}})</a>
-					</td>
-					<td class="govuk-table__cell govuk-table__cell--numeric">{{ [4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20] | random }}</td>
-					<td class="govuk-table__cell govuk-table__cell--numeric">{{ [1,2,3,4] | random }}</td>
-				</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-
-		<div class="aed-search-results">
-			<ol class="aed-search-results__list">
-				<li class="aed-search-results__list-item">
-					<h2 class="govuk-heading-m aed-search-results__heading">
-						<a class="aed-search-results__link" id="provider-10065593" href="cohort-details">
-							{{data['request']['standard']['name']}}
-						</a>
-					</h2>
-				</li>
-
-				{% for _standard in data['standards'].list %}
-				<li class="aed-search-results__list-item">
-					<h2 class="govuk-heading-m aed-search-results__heading">
-						<a href="standard?selectedStandard={{_standard.title}} (level {{_standard.level}})" class="govuk-link">{{_standard.title}} (level {{_standard.level}})</a>
-					</h2>
-
-					<ul class="govuk-list govuk-!-font-size-16">
-						<li>
-							{{ [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20] | random }} apprentices
-						</li>
-						<li>
-							{{ [1,2,3,4,5,6,7,8,9] | random }} employers (within 18 miles)
-						</li>
-					</ul>
-				</li>
-				{% endfor %}
-			</ol>
 		</div>
 	</div>
-</div>
+
+	<div class="govuk-width-container">
+		<div class="govuk-grid-row">
+			<div class="govuk-grid-column-two-thirds">
+				<form method="get" action="/find-an-assessment-opportunity/Search#approved">
+					<h2 class="govuk-label-wrapper">
+						<label class="govuk-label govuk-label--l" for="search-term">
+							Search
+						</label>
+					</h2>
+
+					<div class="das-icon-search das-icon-search--on-white" data-module="gem-toggle-input-class-on-focus">
+						<span id="search-term-hint" class="govuk-hint">
+							Search for Standard, reference or sector (route)
+						</span>
+						<div class="das-icon-search__item-wrapper">
+							<input type="search" id="search-term" class="das-icon-search__item das-icon-search__input js-class-toggle" name="SearchTerm" value="">
+							<div class="das-icon-search__item das-icon-search__submit-wrapper">
+								<button type="submit" class="das-icon-search__submit" id="search">Search</button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+
+		<div class="govuk-grid-row">
+			<div class="govuk-grid-column-full">
+				<h2 class="govuk-heading-m">Standards</h2>
+				<p class="govuk-body">
+					<span class="govuk-!-font-weight-bold">530</span> standards found
+				</p>
+
+				<table class="govuk-table govuk-table--small">
+					<thead class="govuk-table__head">
+						<tr class="govuk-table__row">
+							<th scope="col" class="govuk-table__header">
+								<a class="sorted-ascending approved-sort govuk-link">Standard</a>
+							</th>
+							<th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">
+								<a class="approved-sort govuk-link">Apprentices</a>
+							</th>
+							<th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">
+								<a class="approved-sort govuk-link">Interested employers</a>
+							</th>
+						</tr>
+					</thead>
+					<tbody class="govuk-table__body">
+						{% for _standard in data['standards'].list %}
+						<tr class="govuk-table__row">
+							<td class="govuk-table__cell">
+								<a href="standard?selectedStandard={{_standard.title}} (level {{_standard.level}})" class="govuk-link">{{_standard.title}} (level {{_standard.level}})</a>
+							</td>
+							<td class="govuk-table__cell govuk-table__cell--numeric">{{ [4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20] | random }}</td>
+							<td class="govuk-table__cell govuk-table__cell--numeric">{{ [1,2,3,4] | random }}</td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</main>
 {% endblock %}
+
 {% block pageScripts %}
 <script type="text/javascript" src="/public/javascripts/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="/public/javascripts/accessible-autocomplete.min.js"></script>
