--- a/app/views/aed-provider-3-1/check-your-answers.html
+++ b/app/views/aed-provider-3-1/check-your-answers.html
@@ -34,7 +34,7 @@ html: 'This service is being used for research only.'
 			{
 				key:
 				{
-					text: "Apprenticeship training course"
+					text: "Standard"
 				},
 				value:
 				{
@@ -48,7 +48,7 @@ html: 'This service is being used for research only.'
 				},
 				value:
 				{
-					html: "<p>CV1 2RT<br>At apprentice's workplace</p>"
+					html: "<p>Day release<br>Block release</p>"
 				},
 				actions:
 				{
@@ -84,7 +84,7 @@ html: 'This service is being used for research only.'
 			{
 				key:
 				{
-					text: "Cost per apprentice"
+					text: "Cost"
 				},
 				value:
 				{
@@ -105,11 +105,11 @@ html: 'This service is being used for research only.'
 		}) }}
 
 		<p>
-			We'll send an email with these details to the employers you have selected.
+			We'll send an email with your training proposal to all employers in this cohort.
 		</p>
 
 		<p>
-			Employers may contact you if they are interested in working with you.
+			Employers may contact you if they are interested in your proposal.
 		</p>
 
 		<form method="post">
