--- a/app/views/aed-provider-3-1/cohort-requirements.html
+++ b/app/views/aed-provider-3-1/cohort-requirements.html
@@ -25,22 +25,10 @@ html: 'This service is being used for research only.'
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Add details of the training you could offer
+			Let employers know the requirements for this cohort
 		</h1>
 		
 		{% include './includes/_cohort-details.html' %}
-
-		{% set locationHtml %}
-		<div class="govuk-form-group govuk-!-margin-bottom-3" data-list-search-filter="">
-			<!-- <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Training location</h2> -->
-			<div class="govuk-form-group">
-				<label for="search-location" class="govuk-label">
-					Enter the postcode where the training will take place
-				</label>
-				<input type="search" value="" id="search-location" name="request[location]" title="Search" class="govuk-input govuk-input-background">
-			</div>
-		</div>
-		{% endset %}
 
 		{{ govukCheckboxes({
 			idPrefix: "waste",
@@ -61,15 +49,15 @@ html: 'This service is being used for research only.'
 			items: [
 			{
 				value: "workplace",
-				text: "In a specific location",
-				conditional:
-				{
-					html: locationHtml
-				}
+				text: "At employer’s workplace"
 			},
 			{
 				value: "day-release",
-				text: "At apprentice's workplace"
+				text: "Day release"
+			},
+			{
+				value: "block-release",
+				text: "Block release"
 			}
 			]
 		}) }}
@@ -112,7 +100,7 @@ html: 'This service is being used for research only.'
 		{{ govukInput({
 			label:
 			{
-				text: "Cost per apprentice",
+				text: "Cost",
 				classes: "govuk-label--m",
 				isPageHeading: true
 			},
@@ -124,11 +112,30 @@ html: 'This service is being used for research only.'
 			},
 			hint:
 			{
-				text: ""
+				text: "The total cost of the apprenticeship training course. Employers who do not pay the apprenticeship levy will pay 5% of this amount."
 			},
 			classes: "govuk-input--width-10",
 			spellcheck: false
 		}) }}
+
+		<!-- {{ govukInput({
+			label:
+			{
+				text: "Total apprentices required",
+				classes: "govuk-label--m",
+				isPageHeading: true
+			},
+			hint:
+			{
+				text: "The minimum number of apprentices required in this cohort, from all employers, for the training to go ahead."
+			},
+			id: "event-name",
+			name: "event-name",
+			inputmode: "numeric",
+			pattern: "[0-9]*",
+			spellcheck: false,
+			classes: "govuk-input--width-10"
+		}) }} -->
 
 		<form method="post">
 			<p>
@@ -137,6 +144,10 @@ html: 'This service is being used for research only.'
 				})}}
 			</p>
 		</form>
+
+		<!-- <p>
+			You can <a href="organisation-name">start a new cohort</a> if none of these are suitable.
+		</p> -->
 	</div>
 </div>
 {% endblock %}
