--- a/app/views/aed-provider-3-1/confirmation-page.html
+++ b/app/views/aed-provider-3-1/confirmation-page.html
@@ -19,7 +19,7 @@ html: 'This service is being used for research only.'
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		{{ govukPanel({
-			titleText: "We've notified 4 employers",
+			titleText: "We've notified the employers in the cohort",
 			html: data['request']['standard']['name']
 		}) }}
 
@@ -28,15 +28,15 @@ html: 'This service is being used for research only.'
 		<h2 class="govuk-heading-m">What happens next</h2>
 
 		<p class="govuk-body">
-			We've sent an email containing your training details to the employers you've selected.
+			We've sent an email to the employers in this cohort with your training proposal and details about how to contact you.
 		</p>
 		<p class="govuk-body">
-			You may hear from employers if they're interested in discussing the training you have proposed.
+			You should hear from employers if they're interested in discussing the training you have proposed.
 		</p>
 
-		<!-- <p class="govuk-body">
+		<p class="govuk-body">
 			<a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-		</p> -->
+		</p>
 	</div>
 </div>
 
