--- a/app/views/aed-4-3/aed-training-needs.html
+++ b/app/views/aed-4-3/aed-training-needs.html
@@ -33,9 +33,9 @@ html: 'This service is being used for research only.'
 			Tell us about your training needs
 		</h1>
 
-		<h2 class="govuk-heading-l">
+		<!-- <h2 class="govuk-heading-l">
 			Apprenticeship training course
-		</h2>
+		</h2> -->
 
 		<form method="post">
 			{% if data['courseName'] %}
@@ -180,7 +180,7 @@ html: 'This service is being used for research only.'
 				},
 				{
 					value: "dont-know",
-					text: "I'm not sure"
+					text: "I'm flexible"
 				}
 				]
 			}) }}
@@ -272,7 +272,7 @@ html: 'This service is being used for research only.'
 			}) }}
 			{% endcall %}
 
-			<hr class="govuk-section-break--visible govuk-section-break--l govuk-section-break">
+			<!-- <hr class="govuk-section-break--visible govuk-section-break--l govuk-section-break">
 
 			{{ govukRadios({
 				idPrefix: "register-choose",
@@ -300,9 +300,9 @@ html: 'This service is being used for research only.'
 					text: "No"
 				}
 				]
-			}) }}
+			}) }} -->
 
-			<hr class="govuk-section-break--visible govuk-section-break--xl govuk-section-break">
+			<hr class="govuk-section-break--visible govuk-section-break--l govuk-section-break">
 
 			<h2 class="govuk-heading-l govuk-!-margin-top-8">
 				Submit your training request
