--- a/app/views/aed-4-3/email-provider-interest.html
+++ b/app/views/aed-4-3/email-provider-interest.html
@@ -29,9 +29,10 @@
         },
         value:
         {
-          html: "<p>ABC Training<br>
+          html: '<p>ABC Training<br class="govuk-!-margin-bottom-3">
             01234 567 890<br>
-          info@abc-training.edu.uk</p>"
+          info@abc-training.edu.uk<br>
+          <a href="#">abc-training.edu.uk</a></p>'
         }
       },
       {
@@ -47,6 +48,16 @@
       {
         key:
         {
+          text: "Location"
+        },
+        value:
+        {
+          text: data['request']['training-location']
+        }
+      },
+      {
+        key:
+        {
           text: "Available start date"
         },
         value:
@@ -57,7 +68,7 @@
       {
         key:
         {
-          text: "Training cost"
+          text: "Training cost per apprentice"
         },
         value:
         {
@@ -72,7 +83,7 @@
   </div>
 
   <p>
-    You should contact ABC Training if you're interested in their training proposal. 
+    You should contact ABC Training if you're interested in this training. 
   </p>
 
   <p>
