--- a/app/views/aed-provider-3-0/check-your-answers.html
+++ b/app/views/aed-provider-3-0/check-your-answers.html
@@ -105,11 +105,11 @@ html: 'This service is being used for research only.'
 		}) }}
 
 		<p>
-			We'll send an email with these details to the employers you have selected.
+			We'll send an email with details of your training offer to the employers you've selected.
 		</p>
 
 		<p>
-			Employers may contact you if they are interested in working with you.
+			Employers may contact you if they're interested in your training offer.
 		</p>
 
 		<form method="post">
