--- a/app/views/aed-provider-3-0/confirmation-page.html
+++ b/app/views/aed-provider-3-0/confirmation-page.html
@@ -28,7 +28,7 @@ html: 'This service is being used for research only.'
 		<h2 class="govuk-heading-m">What happens next</h2>
 
 		<p class="govuk-body">
-			We've sent an email containing your training details to the employers you've selected.
+			We've sent an email containing your training offer to the employers you've selected.
 		</p>
 		<p class="govuk-body">
 			You may hear from employers if they're interested in discussing the training you have proposed.
