--- a/app/views/aed-provider-3-0/standard.html
+++ b/app/views/aed-provider-3-0/standard.html
@@ -37,7 +37,6 @@ GOV.UK Prototype Kit
 	<div class="govuk-grid-row">
 		<div class="govuk-grid-column-one-half">
 			<div class="govuk-form-group govuk-!-margin-bottom-3" data-list-search-filter="">
-				<!-- <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Training location</h2> -->
 				<div class="govuk-form-group">
 					<label for="search-location" class="govuk-label">
 						Enter a town, city or postcode
@@ -123,8 +122,6 @@ GOV.UK Prototype Kit
 
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-full">
-		<!-- {% include './includes/_cohort-details.html' %} -->
-
 		{{ govukTable({
 			caption: "3 employers interested in this training",
 			captionClasses: "govuk-heading-l",
@@ -210,7 +207,7 @@ GOV.UK Prototype Kit
 			If you're interested in providing this training, give us some details.
 		</p>
 		<p>
-			We'll send your details to the employers you have selected.
+			We'll send an email with details of your training offer to the employers you've selected.
 		</p>
 
 		{{govukButton({
