--- a/app/views/aed-4-3/aed-confirmation.html
+++ b/app/views/aed-4-3/aed-confirmation.html
@@ -56,7 +56,7 @@ html: 'This service is being used for research only.'
 
 {% set footerLinks %}
 <ul class="govuk-list govuk-!-font-size-16">
-	<li><a href="../aed-provider-2-0/?employer-version={{data['prototypeVersion']}}">Continue to Provider journey</a></li>
+	<li><a href="../{{data['aed-provider-journey']}}">Continue to Provider journey</a></li>
 	<li><a href="../{{data['aed-journey']}}/email-provider-interest">Continue to Employer email</a></li>
 </ul>
 {% endset %}
