--- a/app/views/aed-provider-3-0/confirmation-page.html
+++ b/app/views/aed-provider-3-0/confirmation-page.html
@@ -43,5 +43,5 @@ html: 'This service is being used for research only.'
 {% endblock %}
 
 {% set footerLinks %}
-<a href="../aed-4-0/email-provider-interest">Continue to Employer email</a>
+<a href="../{{data['aed-journey']}}/email-provider-interest">Continue to Employer email</a>
 {% endset %}
