--- a/app/views/aed-4-3/email-provider-interest.html
+++ b/app/views/aed-4-3/email-provider-interest.html
@@ -87,6 +87,10 @@
   </p>
 
   <p>
+    If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>.
+  </p>
+  
+  <p>
     This is an automated message. Do not reply to this email.
   </p>
 
