--- a/app/views/aed-4-3/email-6-weeks.html
+++ b/app/views/aed-4-3/email-6-weeks.html
@@ -14,19 +14,29 @@
   </a>
 
   <h1 class="heading-large">
-    2 weeks, no provider interest
+    We're still looking for training providers to deliver your training
   </h1>
 
   <p>
-    We are still trying to find suitable provision...
+    Training providers know you're interested in this course, but none have told us that they're interested in delivering your training yet.
   </p>
 
   <p>
-    If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>.
+    We'll continue to share your interest with training providers for another 6 weeks.
   </p>
 
+  <h2 class="heading-medium govuk-!-margin-top-7">
+    Try searching for other courses
+  </h2>
   <p>
-    This is an automated message. Do not reply to this email.
+    You can use the <a href="#">Find apprenticeship training for your apprentice</a> service to look for other training courses.
+  </p>
+
+  <h3 class="heading-medium govuk-!-margin-top-7">
+    If you've stopped searching
+  </h3>
+  <p>
+    Otherwise, you can <a href="#">tell us to stop sending emails about this apprenticeship</a>. We'll automatically stop sharing your interest with training providers if we don't hear from you within 7 days. 
   </p>
 
   <p>
