--- a/app/views/aed-4-3/email-2-weeks.html
+++ b/app/views/aed-4-3/email-2-weeks.html
@@ -14,15 +14,19 @@
   </a>
 
   <h1 class="heading-large">
-    2 weeks, no provider interest
+    We're still looking for training providers to deliver your training
   </h1>
 
   <p>
-    We are still trying to find suitable provision...
+    Training providers know you're interested in this course, but none have told us that they're interested in delivering your training yet.
   </p>
 
   <p>
-    If you're no longer interested in this training, you can <a href="#">stop receiving emails about this apprenticeship</a>.
+    We'll continue to share your interest with training providers for another 10 weeks.
+  </p>
+
+  <p>
+    If you're no longer interested in this training, you can <a href="#">tell us to stop sending emails about this apprenticeship</a>. 
   </p>
 
   <p>
